[gd_scene load_steps=4 format=3 uid="uid://cro552huy7rmc"]

[ext_resource type="Script" path="res://addons/gdtemu/virtual_machine.gd" id="1"]
[ext_resource type="Resource" uid="uid://dwttlkmer448i" path="res://examples/riscv64/riscv64_config.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://fkceod0ey0an" path="res://examples/console.tscn" id="3"]

[node name="Console" instance=ExtResource("3")]
note = "riscv64 | user: root | pass: root | ssh root@127.0.0.1 -p 5078"

[node name="VirtualMachine" type="Node" parent="." index="0"]
script = ExtResource("1")
config = ExtResource("2")

[connection signal="paused" from="." to="VirtualMachine" method="set" binds= ["paused", true]]
[connection signal="powered_off" from="." to="VirtualMachine" method="stop"]
[connection signal="powered_on" from="." to="VirtualMachine" method="start"]
[connection signal="unpaused" from="." to="VirtualMachine" method="set" binds= ["paused", false]]
[connection signal="console_wrote" from="VirtualMachine" to="_/__/Terminal" method="write"]
[connection signal="data_sent" from="_/__/Terminal" to="VirtualMachine" method="console_read"]
[connection signal="size_changed" from="_/__/Terminal" to="VirtualMachine" method="console_resize"]
